# NFL_Game_Predictor

./: .gitignore  00_scrape_data.ipynb  01_data_preparation_pau.ipynb  01_eda.ipynb  02_data_preparation.ipynb  02_data_preparation_pau.ipynb  03_data_prep.ipynb  03_data_viz.ipynb  04_model.ipynb  README.md  Scraping_NFL_Game_Data.ipynb  first_data_scraping.ipynb  pyproject.toml  requirements.txt  requirements_pau.txt
Data/: nfl_games.csv  scraped_data.csv  transformed.csv
Notebooks/: 01_data_preparation.ipynb  01_model-Copy1.ipynb  01_model.ipynb  02_data_preparation_pau.ipynb
eda/: SWEETVIZ_REPORT.html
src/: data_preparation.py  paths.py  scraping.py
src/.ipynb_checkpoints/: scraping-checkpoint.py
