[tool.poetry]
name = "src"
version = "0.1.0"
description = "Machine Learning service that predicts the outcome of NFL matches"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
